Package triangulation: provides triangulations Delaunay triangulations, 
constrained and regular triangulations with  tests and examples.

Ver 4.85 (17/04/01)
- Fix warning in Pointer.h for operator==(CGAL_NULL_TYPE).
- Fix warning in Triangulation_line_face_circulator_2.h
- added typename in _test_line_face_circulators

Ver 4.84 (14/03/01)
- pass the private constructor of Line_face_circulator
  to public, to please Microsoft compilers

Ver 4.83 (22/02/01)
- cleaned up Line_face_circulator and locate. 
- fixed line_walk
- add test for Line_face_circulator and line_walk

Ver 4.82 (20/02/01)
- remove const_cast for "this" in march_locate_2d of Triangulation_2

Ver 4.81 (19/01/01)
- changed makefile for submission with CVS tag
- added missing function void insert(Vertex_handle va, Vertex_handle vb)
  in Constrained_Delaunay_triangulation_2.h
- regenerate triangulation_assertions.h to avoid old style casts.
- fixed warning in operator ==(CGAL_NULL_TYPE) of Triangulation_ds_circulator_2

Ver 4.80 (9/01/01)
- added missing std:: in  test for new design
- added a default for TDS of Triangulation_2

Ver 4.79 (28/12/00)
- fixed a typename in Regular_triangulation
- add a test for new design

Ver 4.78 (26/12/00)
- add a few missing typedef for dual functions of  Regular_triangulation

Ver 4.77 (21/12/00)
- fixed the signature of flip in Triangulation_2.h

Ver 4.76 (14/12/00 )
- added the dual power diagram to regular triangulations
- added a typename in Triangulation_data_structure (default and using list)

Ver 4.75 (11/12/00)
- fixed a few bugs in Constrained_Delaunay_triangulations :
  missing typedef + clashing typedef  for VC++
- added make_hole(), star_hole(), create_vertex(), delete_vertex()
  in Triangulation_default_data_structure_2
  and Triangulation_data_structure_using_list_2
- Regular triangulation support for Simple Cartesian kernels. [syl]
- Geomview output, which works for terrains as well. [syl]
- Regenerate triangulation_assertions.h. [syl]

Ver 4.74